# cctv-surveillance

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  5b4fe0f76497_phase2a_add_homography_adjacent_zones.py
docs/: EXPLAINER.md
docs/presentation/: index.html  serve.py
tests/: conftest.py  test_api_auth.py  test_api_deps.py  test_api_health.py  test_api_persons.py  test_config.py  test_db_audit.py  test_db_models_alerts.py  test_db_models_anomaly.py  test_db_models_audit.py  test_db_models_forensic.py  test_db_models_identity.py  test_db_models_maintenance.py  test_db_models_topology.py  test_db_models_tracking.py  test_db_session.py  test_db_writer.py  test_identity_engine.py  test_identity_faiss_dirty.py  test_identity_faiss_index.py  test_identity_homography.py  test_identity_reid.py  test_identity_zone_presence.py  test_inference_detector.py  test_inference_embedder.py  test_inference_engine.py  test_inference_messages.py  test_inference_tracker.py  test_ingestion_messages.py  test_ingestion_shm.py  test_ingestion_worker.py  test_migration.py  test_redis_client.py
vms/: __init__.py  config.py  redis_client.py
vms/api/: deps.py  main.py  schemas.py
vms/db/: __init__.py  audit.py  models.py  session.py
vms/identity/: __init__.py  engine.py  faiss_dirty.py  faiss_index.py  homography.py  reid.py  zone_presence.py
vms/inference/: __init__.py  detector.py  embedder.py  engine.py  messages.py  tracker.py
vms/ingestion/: __init__.py  messages.py  shm.py  (+1 more)
(+20 files in other folders)
